codex-rs/tui/src/snapshots/codex_tui__i18n__tests__experimental_chinese_40.snap
---
source: tui/src/i18n_tests.rs
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 12 },
    content: [
        "                                        ",
        "  实验性功能                            ", // hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " ")]
        "  勾选表示已配置启用。部分实验功能仅对  ", // hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " ")]
        "  新任务生效，或需要重启 Codex 服务。   ", // hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (32, " "), (34, " "), (36, " ")]
        "                                        ",
        "                                        ",
        "› [x] 网络代理  对已获网络访问权限的沙箱", // hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (13, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " ")]
        "                会话应用网络代理限制。  ", // hidden by multi-width symbols: [(17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " ")]
        "                                        ",
        "                                        ",
        "  space 切换 · enter 保存 · esc 保存/关 ", // hidden by multi-width symbols: [(9, " "), (11, " "), (22, " "), (24, " "), (33, " "), (35, " "), (38, " ")]
        "  闭                                    ", // hidden by multi-width symbols: [(3, " ")]
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 7, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 9, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 3, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 5, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 7, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 9, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 11, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 15, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 17, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 19, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 23, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 25, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 29, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 31, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 33, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 35, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 36, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 37, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 3, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 5, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 7, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 9, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 11, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 15, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 17, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 19, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 23, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 32, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 34, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 36, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 7, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 9, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 11, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 13, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 16, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 17, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 19, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 21, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 23, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 25, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 27, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 29, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 31, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 33, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 35, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 36, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 37, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 38, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 39, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 16, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 17, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 19, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 21, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 23, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 25, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 27, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 29, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 31, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 33, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 35, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 36, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 37, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 38, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 0, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 7, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 15, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 28, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 31, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
