codex-rs/tui/src/snapshots/codex_tui__i18n__tests__experimental_chinese_80.snap
---
source: tui/src/i18n_tests.rs
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 9 },
    content: [
        "                                                                                ",
        "  实验性功能                                                                    ", // hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " ")]
        "  勾选表示已配置启用。部分实验功能仅对新任务生效，或需要重启 Codex 服务。       ", // hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " "), (53, " "), (55, " "), (57, " "), (59, " "), (68, " "), (70, " "), (72, " ")]
        "                                                                                ",
        "                                                                                ",
        "› [x] 网络代理  对已获网络访问权限的沙箱会话应用网络代理限制。                  ", // hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (13, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " "), (53, " "), (55, " "), (57, " "), (59, " "), (61, " ")]
        "                                                                                ",
        "                                                                                ",
        "  space 切换 · enter 保存 · esc 保存/关闭                                       ", // hidden by multi-width symbols: [(9, " "), (11, " "), (22, " "), (24, " "), (33, " "), (35, " "), (38, " "), (40, " ")]
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 7, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 9, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 3, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 5, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 7, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 9, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 11, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 15, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 17, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 19, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 23, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 25, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 29, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 31, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 33, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 35, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 36, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 37, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 38, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 40, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 43, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 45, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 46, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 47, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 49, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 51, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 53, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 55, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 57, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 59, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 68, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 69, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 70, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 72, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 7, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 9, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 11, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 13, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 16, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 17, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 19, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 21, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 23, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 25, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 27, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 29, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 31, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 33, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 35, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 36, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 37, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 38, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 39, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 40, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 41, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 43, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 45, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 46, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 47, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 49, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 51, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 53, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 55, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 57, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 59, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 61, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 62, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 7, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 15, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 28, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 31, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
